@@ -29,13 +29,6 @@ with this program; if not, write to the Free Software Foundation, Inc.,
 #define H_SPR_ACCG4  1476
 #define H_SPR_ACCG63 1535
 
-/* gdb register numbers.  */
-#define GR_REGNUM_MAX	63
-#define FR_REGNUM_MAX  127
-#define PC_REGNUM      128
-#define SPR_REGNUM_MIN 129
-#define SPR_REGNUM_MAX (SPR_REGNUM_MIN + 4096 - 1)
-
 /* Initialization of the frv cpu.  */
 void frv_initialize (SIM_CPU *, SIM_DESC);
 void frv_term (SIM_DESC);
